Expand Human Judgment section with security architecture, design scalability, deployment, and knowing-what-not-to-build decisions
Made-with: Cursor